--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "debug": "^4.3.3",
     "express": "^4.17.3",
-    "fs-extra": "^10.0.1"
+    "fs-extra": "^10.0.1",
+    "uuidv4": "^6.2.12"
   }
 }
